...
        builder: (context, state) {
          final isDesktop =
              MediaQuery.of(context).size.width >= widget.desktopBreakpoint;

          if (widget.child == null) {
            return Container(
              key: const Key('inspector_panel'),
              child: _buildInspectorCard(context, state),
            );
          }

          if (isDesktop) {
            return Container(
...
