...
            builder: (context, field) {
              return TextFormField(
                initialValue: field.value,
                onChanged: field.updateValue,
                decoration: InputDecoration(
                  labelText: 'Enter some text',
                  hintText: 'This field is required',
                  prefixIcon: const Icon(Icons.text_fields),
                  errorText: field.displayError,
                  border: const OutlineInputBorder(),
                  helperText: 'Debounced validation (300ms)',
                ),
              );
...
